--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,9 +2,6 @@
     <div id="messagesDiv">
         <div ng-repeat="msg in messages"><em>{{msg.from}}</em>: {{msg.body}}</div>
     </div>
-    <form ng-submit="addMessage($event)">
-        <input type="text" ng-model="name" placeholder="Name">
-        <input type="text" ng-model="msg" placeholder="Message...">
-        <button type="submit">Submit</button>
-    </form>
+    <input type="text" ng-model="name" placeholder="Name">
+    <input type="text" ng-model="msg" ng-keydown="addMessage($event)" placeholder="Message...">
 </div>
