--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,3 +5,79 @@
     <input type="text" ng-model="name" placeholder="Name">
     <input type="text" ng-model="msg" ng-keydown="addMessage($event)" placeholder="Message...">
 </div>
+<div ng-controller="MapController">
+    <div class="google-map affix span7"
+         center="map.center"
+         zoom="map.zoom"
+         draggable="true"
+         dragging="map.dragging"
+         bounds="map.bounds"
+         events="map.events"
+         options="map.options">
+
+        <layer type="TrafficLayer" show="map.showTraffic"></layer>
+        <layer type="BicyclingLayer" show="map.showBicycling"></layer>
+        <layer namespace="weather" type="WeatherLayer" show="map.showWeather"></layer>
+
+        <marker coords="searchLocation">
+        </marker>
+        <markers models="map.randomMarkers" coords="'self'" icon="'icon'" click="'onClicked'"
+                 doCluster="map.doClusterRandomMarkers" clusterOptions="map.clusterOptions">
+        </markers>
+
+        <markers models="map.markers2" coords="'self'" icon="'icon'" click="'onClicked'">
+            <windows show="'showWindow'" closeClick="'closeClick'">
+                <p ng-non-bindable>This is an info window at {{ latitude | number:4 }}, {{ longitude | number:4 }}!</p>
+
+                <p class="muted">My marker will stay open when the window is popped up!</p>
+            </windows>
+        </markers>
+
+
+        <markers models="map.dynamicMarkers" coords="'self'" icon="'icon'" click="'onClicked'" fit='true'>
+            <windows show="'showWindow'" closeClick="'closeClick'">
+                <p>Dynamic Marker created via a delay!</p>
+
+                <p ng-non-bindable>This is an info window at {{ latitude | number:4 }}, {{ longitude | number:4 }}!</p>
+
+                <p class="muted">My marker will stay open when the window is popped up!</p>
+            </windows>
+        </markers>
+
+        <!-- prefedined markers -->
+        <!-- rendering via ng-repear, HIGH OVERHEAD via DOM Manipulation -->
+        <marker ng-repeat="m in map.markers" coords="m" icon="m.icon" click="onMarkerClicked(m)">
+            <marker-label content="m.title" anchor="22 0" class="marker-labels"/>
+            <window show="m.showWindow" closeClick="m.closeClick()">
+                <p>This is an info window at {{ m.latitude | number:4 }}, {{ m.longitude | number:4 }}!</p>
+
+                <p class="muted">My marker will stay open when the window is popped up!</p>
+            </window>
+        </marker>
+
+        <!-- marker for clicked position -->
+        <!-- can not put google.map.animations.BOUNCE , since it is not initiaized yet -->
+        <div ng-init="opts = {animation:1}">
+            <marker coords="map.clickedMarker" options="opts">
+                <marker-label content="map.clickedMarker.title" anchor="24 40" class="marker-labels"/>
+                <window isIconVisibleOnClick="false">This is my clicked marker!
+                    <p class="muted">My marker will reappear when you close me.</p>
+                </window>
+            </marker>
+        </div>
+
+        <!--WINDOWS without markers-->
+        <window show="map.infoWindow.show" coords="map.infoWindow.coords" isIconVisibleOnClick="false">
+            I should not be attached to a
+            marker.
+        </window>
+
+        <window show="map.templatedInfoWindow.show" coords="map.templatedInfoWindow.coords"
+                templateUrl="map.templatedInfoWindow.templateUrl"
+                templateParameter="map.templatedInfoWindow.templateParameter">
+        </window>
+
+        <polyline ng-repeat="p in map.polylines" path="p.path" stroke="p.stroke" visible='p.visible'
+                  geodesic='p.geodesic' fit="false" editable="p.editable" draggable="p.draggable"></polyline>
+    </div>
+</div>
