--- a/app/views/main.html
+++ b/app/views/main.html
@@ -6,6 +6,10 @@
     <input type="text" ng-model="msg" ng-keydown="addMessage($event)" placeholder="Message...">
 </div>
 <div ng-controller="MapController">
+    <div ng-repeat="beat in beats">
+        {{beat}}
+    
+    </div>
     <div class="google-map affix span7"
          center="map.center"
          zoom="map.zoom"
@@ -17,7 +21,7 @@
 
         <layer type="TrafficLayer" show="map.showTraffic"></layer>
         <layer type="BicyclingLayer" show="map.showBicycling"></layer>
-        <layer namespace="weather" type="WeatherLayer" show="map.showWeather"></layer>
+        <!--layer namespace="weather" type="WeatherLayer" show="map.showWeather"></layeri-->
 
         <marker coords="searchLocation">
         </marker>
