--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,14 +1,12 @@
 <div class="hero-unit">
     <div id="messagesDiv">
-        <div ng-repeat="msg in messages"><em>{{msg.from}}</em>: {{msg.body}}</div>
+        <div ng-repeat="poi in pois"></div>
     </div>
-    <input type="text" ng-model="name" placeholder="Name">
-    <input type="text" ng-model="msg" ng-keydown="addMessage($event)" placeholder="Message...">
 </div>
 <div ng-controller="MapController">
     <div ng-repeat="beat in beats">
         {{beat}}
-    
+
     </div>
     <div class="google-map affix span7"
          center="map.center"
