--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,7 @@
 <div class="hero-unit">
+    <button ng-click="postToNode()">
+    asdasdasd
+    </button>
     <div id="messagesDiv">
         <div ng-repeat="poi in pois"></div>
     </div>
@@ -68,6 +71,8 @@
 
         <polyline ng-repeat="p in map.polylines" path="p.path" stroke="p.stroke" visible='p.visible'
                   geodesic='p.geodesic' fit="false" editable="p.editable" draggable="p.draggable"></polyline>
+        <markers models="info.dynamicMarkers" coords="'self'" icon="'icon'" click="'onClicked'" fit="true">
+        </markers>
     </div>
 </div>
 <div ng-controller="MapController">
@@ -80,8 +85,6 @@
          events="map.events"
          options="map.options">
 
-        <markers models="map.dynamicMarkers" coords="'self'" icon="'icon'" click="'onClicked'" fit='true'>
-        </markers>
     </div>
     <div ng-repeat="beat in beats">
         {{beat}}
