--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,4 @@
 <div class="hero-unit">
-    <button ng-click="postToNode()">
-    asdasdasd
-    </button>
     <div id="messagesDiv">
         <div ng-repeat="poi in pois"></div>
     </div>
@@ -16,62 +13,16 @@
          events="map.events"
          options="map.options">
 
-        <layer type="TrafficLayer" show="map.showTraffic"></layer>
-        <layer type="BicyclingLayer" show="map.showBicycling"></layer>
-        <!--layer namespace="weather" type="WeatherLayer" show="map.showWeather"></layeri-->
-
-        <marker coords="searchLocation">
-        </marker>
-        <markers models="map.randomMarkers" coords="'self'" icon="'icon'" click="'onClicked'"
-                 doCluster="map.doClusterRandomMarkers" clusterOptions="map.clusterOptions">
-        </markers>
-
-        <markers models="map.markers2" coords="'self'" icon="'icon'" click="'onClicked'">
-            <windows show="'showWindow'" closeClick="'closeClick'">
-                <p ng-non-bindable>This is an info window at {{ latitude | number:4 }}, {{ longitude | number:4 }}!</p>
-
-                <p class="muted">My marker will stay open when the window is popped up!</p>
-            </windows>
-        </markers>
 
 
+       <markers models="map.dynamicMarkers" coords="'self'" icon="'icon'" click="'onClicked'" >
+       <windows show="'showWindow'" closeClick="'closeClick'">
+            <p>Dynamic Marker created via a delay!</p>
 
-        <!-- prefedined markers -->
-        <!-- rendering via ng-repear, HIGH OVERHEAD via DOM Manipulation -->
-        <marker ng-repeat="m in map.markers" coords="m" icon="m.icon" click="onMarkerClicked(m)">
-            <marker-label content="m.title" anchor="22 0" class="marker-labels"/>
-            <window show="m.showWindow" closeClick="m.closeClick()">
-                <p>This is an info window at {{ m.latitude | number:4 }}, {{ m.longitude | number:4 }}!</p>
+            <p ng-non-bindable>This is an info window at {{ latitude | number:4 }}, {{ longitude | number:4 }}!</p>
 
-                <p class="muted">My marker will stay open when the window is popped up!</p>
-            </window>
-        </marker>
-
-        <!-- marker for clicked position -->
-        <!-- can not put google.map.animations.BOUNCE , since it is not initiaized yet -->
-        <div ng-init="opts = {animation:1}">
-            <marker coords="map.clickedMarker" options="opts">
-                <marker-label content="map.clickedMarker.title" anchor="24 40" class="marker-labels"/>
-                <window isIconVisibleOnClick="false">This is my clicked marker!
-                    <p class="muted">My marker will reappear when you close me.</p>
-                </window>
-            </marker>
-        </div>
-
-        <!--WINDOWS without markers-->
-        <window show="map.infoWindow.show" coords="map.infoWindow.coords" isIconVisibleOnClick="false">
-            I should not be attached to a
-            marker.
-        </window>
-
-        <window show="map.templatedInfoWindow.show" coords="map.templatedInfoWindow.coords"
-                templateUrl="map.templatedInfoWindow.templateUrl"
-                templateParameter="map.templatedInfoWindow.templateParameter">
-        </window>
-
-        <polyline ng-repeat="p in map.polylines" path="p.path" stroke="p.stroke" visible='p.visible'
-                  geodesic='p.geodesic' fit="false" editable="p.editable" draggable="p.draggable"></polyline>
-        <markers models="info.dynamicMarkers" coords="'self'" icon="'icon'" click="'onClicked'" fit="true">
+            <p class="muted">My marker will stay open when the window is popped up!</p>
+        </windows>
         </markers>
     </div>
 </div>
@@ -84,9 +35,16 @@
          bounds="map.bounds"
          events="map.events"
          options="map.options">
+           
+        <markers models="map.pois" coords="'self'" icon="'icon'" click="'onClicked'" >
+           <windows show="'showWindow'" closeClick="'closeClick'">
+                <p>Dynamic Marker created via a delay!</p>
 
-    </div>
-    <div ng-repeat="beat in beats">
-        {{beat}}
+                <p ng-non-bindable>This is an info window at {{ latitude | number:4 }}, {{ longitude | number:4 }}!</p>
+
+                <p class="muted">My marker will stay open when the window is popped up!</p>
+            </windows>
+        </markers>
+
     </div>
 </div>
