--- a/app/views/main.html
+++ b/app/views/main.html
@@ -36,7 +36,7 @@
          events="map.events"
          options="map.options">
            
-        <markers models="map.pois" coords="'self'" icon="'icon'" click="'onClicked'" >
+        <markers models="map.dynamicPois" coords="'self'" icon="'icon'" click="'onClicked'" >
            <windows show="'showWindow'" closeClick="'closeClick'">
                 <p>Dynamic Marker created via a delay!</p>
 
