poi de pago al click creacion ...

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -33,7 +33,7 @@
          draggable="true"
          dragging="map.dragging"
          bounds="map.bounds"
-         events="map.events"
+         events="map.eventsCreateVenue"
          options="map.options">
            
         <markers models="map.dynamicPois" coords="'self'" icon="'icon'" click="'onClicked'" >
