--- a/app/views/poi.html
+++ b/app/views/poi.html
@@ -1,2 +1,5 @@
-<div>poi: {{ poiId }}</div>
+<div>Nombre del proveedor: {{ poi.name }}</div>
+<div>Descripción del poi: {{ poi.description }}</div>
+<div>Total a pagar: {{ poi.amount }}</div>
+
 <button ng-click="payPalCharge()">Post</button>
