heat map implemented

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,3 +1,8 @@
+<div ng-controller="MapController">
+    <div id="map-canvas-basic"> </div>
+    <button ng-click="showMap()"> show map</button>
+</div>
+
 <div class="hero-unit">
     <div id="messagesDiv">
         <div ng-repeat="poi in pois"></div>
