--- a/app/views/poi.html
+++ b/app/views/poi.html
@@ -1,5 +1,27 @@
-<div>Nombre del proveedor: {{ poi.name }}</div>
+<!-- <div>Nombre del proveedor: {{ poi.name }}</div>
 <div>Descripción del poi: {{ poi.description }}</div>
-<div>Total a pagar: {{ poi.amount }}</div>
+<div>Total a pagar: {{ poi.amount }}</div> -->
+<div>
+	<div class="poi">
+		<a href="/#/tribe/asd"><img class="fullscreen" src="../img/poi.jpg" alt=""></a>
+	<!-- <div class="hidden">
+		<div class="compass">
+			<svg></svg>
+			<p><span>3</span>km</p>
+		</div>
+		<h1 class="title">{{ poi.name }}</h1>
+		<p class="address">
 
-<button ng-click="payPalCharge()">Post</button>
+		</p>
+		<ul class="row media">
+			<li><img class="video-icon" src=""></li>
+			<li><img class="photos-icon" src=""></li>
+			<li><img class="members-icon" src=""></li>
+		</ul>
+		<p class="spot-king">
+			<span class="crown-icon"></span>Jhon Doe is the king of this spot
+		</p>
+		<button class="purchase-button" ng-click="payPalCharge()">Purchase a ticket for 19$</button>
+	</div> -->
+</div>
+</div>
