--- a/app/views/tribe.html
+++ b/app/views/tribe.html
@@ -1,1 +1,25 @@
-tribe
+<div class="tribe">
+			<a href="/#/user/asd"><img class="fullscreen" src="../img/tribe.jpg" alt=""></a>
+	<!-- <div class="hidden">
+		<div class="header">
+			<div class="profile-img"></div>
+			<div>
+				<h1 class="tribe-name">Rollers BCN</h1>
+				<p class="members-n">17 members</p>
+			</div>
+		</div>
+
+		<div class="row">
+			<li>
+				<p>Members</p><span></span>
+				<p>Videos</p><span></span>
+				<p>images</p><span></span>
+			</li>
+		</div>
+		<div class="row">
+			<p>zones</p>
+			<p>tribe karma</p>
+			<p>more info</p>
+		</div>
+	</div> -->
+</div>
