--- a/app/views/main.html
+++ b/app/views/main.html
@@ -6,7 +6,12 @@
         <img class="logo" src="">
         <img class="search" src="">
     </div> -->
-            <a href="/#/poi/asd"><img class="fullscreen" src="../img/main.jpg" alt=""></a>
+    <div style="height:500px;width:400px;">
+        <a href="/#/poi/asd"><img class="fullscreen" src="../img/main.jpg" alt=""></a>
+        <div ng-controller="MapController">
+            <div id="map-canvas-basic"> </div>
+        </div>
+    </div>
    <!--  <div class="content">
         <div class="maps">
             <div ng-controller="MapController" class="hidden-map">
