adding heatmap toggle funcitonality

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,6 +9,7 @@
     <div style="height:500px;width:400px;">
         <a href="/#/poi/asd"><img class="fullscreen" src="../img/main.jpg" alt=""></a>
         <div ng-controller="MapController">
+            <button ng-click="activeHeatmap()">click para activar heatmap</button>
             <div id="map-canvas-basic"> </div>
         </div>
     </div>
