add footer styles

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -7,8 +7,16 @@
         </ul>
     </header>
 
-    <article >
+    <article class="main-content" style="max-height: 50%">
         <!-- <a href="/#/poi/asd"><img class="fullscreen" src="../img/main.jpg" alt=""></a> -->
         <div id="map-canvas-basic"> </div>
     </article>
+
+    <footer class="footer">
+        <ul class="unstyled">
+            <li><a href="#">RollersBCN <span>></span></a></li>
+            <li><a href="#">WildSkaters <span>></span></a></li>
+            <li><a href="#">PayPalers <span>></span></a></li>
+        </ul>
+    </footer>
 </section>
