--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -14,16 +14,15 @@ body {
     width: 100%; }
 
 .topbar {
-    padding: 10px;
+    padding: 20px;
     background: #1e1d1d ;
-    min-height: 40px; }
+    min-height: 30px; }
 
 .topbar {
     text-align: center; }
 
 .topbar-img {
-    max-height: 21px !important;
-    padding: 7px 0 0; }
+    max-height: 21px; }
 
 .topbar > ul > li:first-child {
     float: left; }
@@ -39,11 +38,35 @@ ul.list-inline > li {
     display: inline; }
 
 ul.unstyled > li {
-    list-style: none;}
+    list-style: none; }
+
+.main-content {
+    background: #1e1d1d; }
+
+.footer {
+    padding: 1%;
+    background: #1e1d1d;
+    max-height: 150px;
+    height: 150px; }
+
+.footer li {
+    width: 100%; }
+
+.footer li a {
+    color: white;
+    text-decoration: none;
+    display: block;
+    height: 50px;
+    font-size: 30px; }
+
+.footer li a span {
+    float: right;}
+
+#map-canvas-basic {
+    height: 550px; }
 
 .angular-google-map-container {
-  width: 100%;
-  height: 600px; }
+  width: 100%; }
 
 /* fix for Twitter Bootstrap handling of responsive images */
 .angular-google-map img {
