adds paypal finishing

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,9 +14,9 @@
 
     <footer class="footer">
         <ul class="unstyled">
-            <li><a href="#">RollersBCN <span>></span></a></li>
-            <li><a href="#">WildSkaters <span>></span></a></li>
-            <li><a href="#">PayPalers <span>></span></a></li>
+            <li><a href="#/tribe/12">RollersBCN <span>></span></a></li>
+            <li><a href="#/tribe/12">WildSkaters <span>></span></a></li>
+            <li><a href="#/tribe/12">PayPalers <span>></span></a></li>
         </ul>
     </footer>
 </section>
