--- a/app/views/poi.html
+++ b/app/views/poi.html
@@ -3,7 +3,7 @@
 <div>Total a pagar: {{ poi.amount }}</div> -->
 <div>
 	<div class="poi">
-		<a href="/#/tribe/asd"><img class="fullscreen" src="../img/poi.jpg" alt=""></a>
+		<img class="fullscreen" src="../img/poi.jpg" alt="" ng-click="payPalCharge()">
 	<!-- <div class="hidden">
 		<div class="compass">
 			<svg></svg>
